--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "imask": "^6.4.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
-    "react-device-detect": "^2.2.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-intersection-observer": "^9.3.5",
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
     "react-swipeable": "^7.0.0",
+    "react-transition-group": "^4.4.5",
     "recharts": "^2.1.12",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
