--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-imask": "^7.5.0",
     "react-intersection-observer": "^9.3.5",
     "react-material-ui-carousel": "^3.4.2",
     "react-number-format": "^4.9.3",
